--- a/Parts/06DeOndernemingAlsOrganisatie.tex
+++ b/Parts/06DeOndernemingAlsOrganisatie.tex
@@ -62,5 +62,24 @@ We weten nu dat in $q^*$ de winst maximaal is voor alle positieve productienivea
 
 $\rightarrow$ controleren of $TW(q)$ in $q^*$ positief is (=\textbf{sluitingsregel})
 
+\subsection{Kritiek op Model van de Winstmaximaliserende Onderneming}
+Twijfels rond model van winstmaximalisatie:
+\begin{description}
+	\item[Gedragstheorie\"en]: zijn mensen wel zo rationeel om winstmaximaliserende keuzes te maken?
+	\item[Managementtheorie\"en]: eigenaars zijn aandeelhouders en willen dus een zo hoog mogelijke winst, maar staan niet in voor dagdagelijkse leiding $\Rightarrow$ misschien heeft andere objectieven.
+\end{description}
 
+Voor het eerste punt van kritiek zijn er vele empirische studies (bvb. Levitt-Feldman) die aantonen dat $MO$ en $MK$ elkaar toch zullen benaderen. Het tweede punt is ook bekend onder het \textbf{principaal-agent probleem}. Dit stelt dat het management eerder prestige nastreeft, wat verbonden is met een grote omzet. Een grote omzet nastreven zal echter niet de maximale winst garanderen. $\Rightarrow$ beperkte controle \& prestige = probleem.
 
+Oplossingen die hiervoor kunnen dienen:
+\begin{itemize}
+	\item interne controlemechanismen:
+	\begin{itemize}
+		\item \textbf{rechtstreekse controle} door de raad van bestuur doormiddel van (in)formele regels
+		\item \textbf{onrechtstreekse controle} door het toedienen van de juiste prikkels aan het management (bonussen, aandelenopties,...)
+	\end{itemize}
+	\item externe controlemechanismen: 
+	\begin{itemize}
+		\item slechte prestatie $\Rightarrow$ lage koers $\Rightarrow$ dreiging van overname
+	\end{itemize}
+\end{itemize}
