--- a/Parts/05DeConsument.tex
+++ b/Parts/05DeConsument.tex
@@ -36,6 +36,7 @@ Uit transitiviteit en niet-verzadiging volgt dat indifferentiecurves nooit kunne
 Een indifferentiecurve zal dalend zijn aangezien bundels equivalent zijn wanneer een bij minder van het ene, meer van het andere in de plaats verwacht wordt. Daarenboven worden indifferentiecurves meestal convex afgebeeld omwille van de assumpties die genomen worden m.b.t. de $MSV$.
 
 \subsubsection{De Marginale Substitutievoet (MSV)}
+\label{sssec:deMarginaleSubstitutievoet}
 =de prijs van het ene goed uitgedrukt in het andere goed. M.a.w. als je van het ene goed moet inleveren, hoeveel wil je van het andere als compensatie om hetzelfde nut te behouden. Bijgevolg geldt dat:
 \begin{equation}
 	MSV = \frac{\Delta q_1}{\Delta q_2}
