--- a/Parts/06DeOndernemingAlsOrganisatie.tex
+++ b/Parts/06DeOndernemingAlsOrganisatie.tex
@@ -38,6 +38,7 @@ $GO$ en $MO$ kunnen we ook afleiden als we $TO$ als gegeven hebben. In elke $q$ 
 
 
 \subsubsection{Kostenfuncties}
+\label{sssec:kostenfuncties}
 =verband tussen produciehoeveelheid en de kosten om die hoeveelheid te kunnen produceren. Analoog aan de opbrengstenfuncties hebben we nu $TK$, $GK$ en $MK$, waarbij $MK$ altijd positief moet zijn aangezien er altijd meer geld nodig zal zijn voor extra inputs. We gaan er voorlopig van uit dat $TK$ niet lineair is. Waarom juist zien we in hoofdstuk~\ref{sec:productieEnKosten}.
 
 Het gevolg van die niet-lineariteit is dat zowel $MK$ en $GK$ eerst dalen en daarna terug stijgen. $MK$ snijdt $GK$ ook in zijn laagste punt en ligt voor dat punt onder $GK$. Ook hier kunnen $MK$ en $GK$ afgeleid worden uit de curve van $TO$ op een analoge manier als voorheen.
