--- a/Parts/07ProductieEnKosten.tex
+++ b/Parts/07ProductieEnKosten.tex
@@ -1,2 +1,52 @@
 \section{Productie en Kosten}
 \label{sec:productieEnKosten}
+Hoe kan een producent een bepaalde $q$ produceren tegen een zo laag mogelijke prijs? $\Rightarrow$ welke verdeling van inputs?
+
+\subsection{De Productiefunctie}
+=hoeveel je voor elke combinatie vann productiefactoren kan produceren. Voor de eerste keer maken we ook onderscheid tussen beschouwde periode.
+\begin{description}
+	\item[Korte Termijn ($KT$)] = periode waarin sommige productiefactoren niet/zeer moeilijk/zeer kostelijk aan te passen zijn.
+	\item[Lange Termijn ($LT$)] = periode waarin alle productiefactoren relatief eenvoudig aan te passen zijn.
+\end{description}
+We concentreren on op 2 productiefactoren: kapitaal ($K$) en arbeid ($L$) waarbij in de korte termijn arbeid altijd als variabel en kapitaal als vast beschouwd wordt. We bekomen dus volgende formules:
+\begin{align}
+	q &= f(K,L)\\
+	q^{KT} &= f(L,\overline{K}) = f(L)
+\end{align}
+
+Productieniveaus kunnen we voorstellen m.b.v. isokwanten die dezelfde $q$ voor verschillende combinaties van $K$ en $L$ weergeven, of grafiek met 1 constante productiefactor zodat q wel afleesbaar is. $q^{KT}$ kan zo afgebeeld worden aangezien $K$ daar constant is.
+
+\subsubsection{Productiviteit van productiefactoren} 
+We introduceren de \textbf{gemiddelde fysische productiviteit} ($GFP$) en de \textbf{marginale fysische productiviteit} ($MFP$), waarbij $GFP_L = \frac{q}{L}$; $GFP_k = \frac{q}{k}$; $MFP_L = \frac{\Delta q}{\Delta L}$ en  $MFP_K = \frac{\Delta q}{\Delta K}$. Het concept van \textbf{variabele meeropbrengsten} zegt dat als \'e\'en productiefactor stijgt en alle andere productiefactoren constant blijven, dat zowel $MFP$ als $GFP$ voor die productiefactor aanvankelijk zullen stijgen tot een maximum en nadien terug zullen dalen.
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[scale=0.4]{Images/white.png}
+	\caption{Twee voorbeelden de productiefunctie op korte termijn}
+	\label{fig:productiefunctieKorteTermijn}
+\end{figure}
+
+In figuur~\ref{fig:productiefunctieKorteTermijn} kan je nu dus zien waarom we aannemen dat de productiefunctie dus niet gewoon concaaf stijgend is. Je kan zien in het andere voorbeeld dat $MFP$ en $GFP$ eerst zal stijgen en dan dalen, waarbij $MFP$ wederom de helling in een bepaald punt is en $GFP$ de voerstraal in een punt. Merk ook op dat $MFP$ de $GFP$ snijdt in het maximum. De logica hierachter is analoog aan het snijden van $GK$ en $MK$ in het minimum van $GK$ als beschreven in sectie~\ref{sssec:kostenfuncties}.
+
+De \textbf{marginale technische substitutievoet} ($MTSV$) geeft weer hoe je de ene productiefactor kan substitueren door de andere. Denk hierbij terug aan de marginale substitutievoet uit sectie~\ref{sssec:deMarginaleSubstitutievoet}.
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[scale=0.4]{Images/white.png}
+	\caption{Perfecte substituten en perfecte complementen}
+	\label{fig:perfecteSubstitutenEnPerfecteComplementen}
+\end{figure}
+
+Figuur~\ref{fig:perfecteSubstitutenEnPerfecteComplementen} geeft de twee speciale gevallen van de $MTSV$ weer. Bij \textbf{perfecte substituten} zijn de isokwanten rechten aangezien de $MSTV$ hetzelfde is over de ganse isokwant. De isokwanten van \textbf{perfecte complementen} zien er uit als rechthoekige hoeken. Dit komt doordat een bepaalde $q$ een bepaalde mix van twee inputs nodig heeft. Stel dat je \'e\'en van de twee inputs verhoogt zal dit geen effect hebben op $q$, je zal enkel overschot van die inputfactor hebben. $\Rightarrow MTSV$ is niet berekenbaar zonder bijkomende informatie. De $MTSV$ is namelijk 0 in het verticale deel, oneindig in het horizontale deel en niet gedefini\"eerd in het hoekpunt (er gaan oneindig veel raaklijnen door). M.a.w. deze inputs zijn niet substitueerbaar.
+
+Er is een \textbf{relatie tussen $MTSV$ en $MFP$} v/d inputs, meer bepaald van de verhouding v/d $MFP$'s. Stel $MFP_L$ groot en $MFP_K$ klein $\Rightarrow |MFSV|$ groot (als je er van uit gaat dat $K$ altijd op de y-as staat) want bij 1 extra arbeid $\Rightarrow q$ stijgt sterk. $MFP_K$ is klein dus we kunnen veel kapitaal opgeven om $q$ constant te houden. Algebra\"ish ziet het er als volgt uit:
+\begin{align}
+	&\Delta q = MFP_L \times \Delta L + MFP_K \times \Delta K \\
+	&\Rightarrow 0 = MFP_L \times \Delta L + MFP_K \times \Delta K \\
+	&\Rightarrow MTSV = \frac{\Delta K}{\Delta L} = -\frac{MFP_L}{MFP_K}
+\end{align}
+$|MTSV|$ daalt dus naarmate $L$ toeneemt (nog steeds in de veronderstelling dat $L$ op de x-as staat).
+
+\subsection{Kosten op Korte Termijn}
+
+
+\subsection{Kosten op Lange Termijn}
