completed first subsection of chapter 7

--- a/Parts/07ProductieEnKosten.tex
+++ b/Parts/07ProductieEnKosten.tex
@@ -46,6 +46,58 @@ Er is een \textbf{relatie tussen $MTSV$ en $MFP$} v/d inputs, meer bepaald van d
 \end{align}
 $|MTSV|$ daalt dus naarmate $L$ toeneemt (nog steeds in de veronderstelling dat $L$ op de x-as staat).
 
+\subsubsection{Schaalopbrengsten}
+Op korte termijn krijgen we het effect van variabele meeropbrengsten, die onder meer voor een dalende $|MTSV|$ zorgen, maar op lange termijn zijn alle inputfactoren variabel. Stel dat we veronderstellen dat alle inputfactoren met eenzelfde $x\%$ stijgen, dan krijgen we volgende situaties:
+\begin{itemize}
+	\item output neemt toe met meer dan $x$\%$\Rightarrow$ \textbf{toenemende schaalopbrengsten}
+	\item output neemt toe met $x$\%$\Rightarrow$ \textbf{constante schaalopbrengsten}
+	\item output neemt toe met minder dan $x$\%$\Rightarrow$ \textbf{afnemende schaalopbrengsten}
+\end{itemize}
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[scale=0.4]{Images/white.png}
+	\caption{Voorbeeld afnemende schaalopbrengsten (slide 18)}
+	\label{fig:voorbeeldAfnemendeSchaalopbrengsten}
+\end{figure}
+
+Je zou altijd constante schaalopbrengsten verwachten. Stel bvb. dat je een exacte replica van een fabriek op een andere plaats bouwt, dan lijkt het logisch dat de output twee keer zo hoog zal zijn. Toch een aantal redenen voor toenemende schaalopbrengsten:
+\begin{itemize}
+	\item ondeelbaarheden (grotere machines soms effici\"enter)
+	\item specialisatie
+	\item fysische wetmatigheden (containerschepen)
+\end{itemize}
+Zo zijn er ook een aantal redenen voor afnemende schaalopbrengsten:
+\begin{itemize}
+	\item omgevingsfactoren
+	\item organisatorische problemen $\rightarrow$ hoe groter hoe meer moeite met alles te co\"ordineren
+	\item fysische wetmatigheden
+\end{itemize}
+
+Schaalopbrengsten kunnen afhangen van het niveau van $q$. Vb. toenemende schaalopbrengsten bij een lagere $q$, evoluerend naar afnemende schaalopbrengsten bij een hogere $q$.
+
+\subsubsection{De Cobb-Douglas Productiefunctie}
+Deze functie wordt voorgesteld als:
+\begin{equation}
+	f(L,K) = a L^\alpha K^\beta = q
+\end{equation}
+
+Stel nu dat we hier de theorie van schaalopbrengsten op toepassen en alle productiefactoren laten vermenigvuldigen met een factor $\lambda$:
+\begin{align}
+	f(\lambda L, \lambda K) &= a (\lambda L)^\alpha (\lambda K)^\beta	\\
+	&= \lambda^{\alpha + \beta} a L^\alpha K^\beta	\\
+	&= \lambda^{\alpha + \beta} q
+\end{align}
+
+We onderscheiden de volgende gevallen:
+\begin{description}
+	\item[$\alpha + \beta < 1$]: afnemende schaalopbrengsten
+	\item[$\alpha + \beta = 1$]: constante schaalopbrengsten
+	\item[$\alpha + \beta > 1$]: toenemende schaalopbrengsten
+\end{description}
+
+
+
 \subsection{Kosten op Korte Termijn}
 
 
