--- a/Parts/07ProductieEnKosten.tex
+++ b/Parts/07ProductieEnKosten.tex
@@ -99,6 +99,15 @@ We onderscheiden de volgende gevallen:
 
 
 \subsection{Kosten op Korte Termijn}
+\begin{equation}
+	TK = wL + rK
+\end{equation}
+Maar op $KT$ ligt $K$ vast en we bekomen volgende vergelijking:
+\begin{align}
+	TK_{KT} =& w L(q) + r\overline{K}
+		=& VK_{TK}(q) + FK
+\end{align}
 
+Merk op dat FK niet in functie staat van $q$ aangezien het vaste kosten zijn, ze kunnen wel vari\"eren in de tijd.
 
 \subsection{Kosten op Lange Termijn}
