--- a/main.tex
+++ b/main.tex
@@ -103,6 +103,7 @@
 \input{Parts/05DeConsument.tex}
 \input{Parts/06DeOndernemingAlsOrganisatie}
 \input{Parts/07ProductieEnKosten.tex}
+\input{Parts/08VolmaakteMededinging.tex}
 
 
 \end{document}
