--- a/Parts/08VolmaakteMededinging.tex
+++ b/Parts/08VolmaakteMededinging.tex
@@ -23,4 +23,116 @@ Uit het feit dat $\overline{p}$ volgt dat:
    GO &= \frac{TO(q)}{q} = \frac{q \times \overline{p}}{q} = \overline{p} \\
    MO &= \frac{\Delta TO(q)}{\Delta q} = \frac{\overline{p} \times \Delta q}{\Delta q} = \overline{p}
 \end{align}
-$TO$ is dus een stijgende rechten, wat er voor zorgt dat $MO$ en $GO$ constanten zijn, en ook aan elkaar gelijk zijn.
+$TO$ is dus een stijgende rechte, wat er voor zorgt dat $MO$ en $GO$ constanten zijn, en ook aan elkaar gelijk zijn.
+
+\subsection{Korte Termijn Aanbod van een Onderneming}
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[scale=0.4]{Images/white.png}
+   \caption{Aanbond van een onderneming in volmaakte mededinging op KT (slide 6)}
+   \label{fig:aanbodVolmaakteMededingingKT}
+\end{figure}
+
+Figuur~\ref{fig:aanbodVolmaakteMededingingKT} toont hoe het aanbod dat een producent in een markt van volmaakte mededinging gevormd zal worden. Net zoals vroeger zal de winst maximaal zijn in het punt waar $MO = MK$. Het enige ``vreemde'' hier is dus dat $MO$ een horizontaal verloop heeft. Als dit punt boven $GVK$ ligt zal er geproduceerd worden, als het ook boven $GK$ ligt zal er ook effectief winst gemaakt worden.
+
+\subsection{Lange Termijn Aanbod van een Onderneming}
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[scale=0.4]{Images/white.png}
+   \caption{Aanbond van een onderneming in volmaakte mededinging op LT (slide 8)}
+   \label{fig:aanbodVolmaakteMededingingLT}
+\end{figure}
+
+In figuur~\ref{fig:aanbodVolmaakteMededingingLT} wordt op dezelfde manier te werk gegaan als in figuur~\ref{fig:aanbodVolmaakteMededingingKT}. We zoeken dus waar $MO = MK$, maar voor de sluitingsregel kijken we nu of dit punt $GK$ dekt en niet $GVK$ aangezien we nu geen vaste kosten meer hebben (alles variabel op LT).
+
+Merk op dat het aanbod op $LT$ een vlakker verloop zal hebben dan op $KT$: op $KT$ zijn sommige productiefacotren vast $\Rightarrow$ op $LT$ zullen bij een toename van de productie de kosten zeker niet sterker stijgen dan op $KT \Rightarrow$ vlakker verloop op $LT$.
+
+\subsection{Marktevenwicht}
+Nu willen we het marktaanbod uit al deze aanbodcurves voor individuele bedrijven halen $\Rightarrow$ aggregeren, zie figuur~\ref{fig:vbAggregeren} voor een voorbeeld. We moeten dit ook doen voor de marktvraag. Bij aggregeren mogen we functies niet gewoon optellen, maar moeten we kijken voor welke $p$'s ze gelden.
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[scale=0.4]{Images/white.png}
+   \caption{Voorbeeld aggregeren van functies (slide 12)}
+   \label{fig:vbAggregeren}
+\end{figure}
+
+\subsubsection{KT-Marktevenwicht}
+Op $KT$ is het aantal ondernemingen gegeven aangezien $\overline{K}$. We gaan er voorlopig ook van uit dat alle ondernemingen identiek zijn, ze hebben dezelfde kostenstructuur.
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[scale=0.4]{Images/white.png}
+   \caption{Vorming van het evenwicht op KT bij volmaakte mededinging (slide 15)}
+   \label{fig:evenwichtkTVM}
+\end{figure}
+
+\subsubsection{LT-Marktevenwicht}
+
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[scale=0.4]{Images/white.png}
+   \caption{Vorming van het evenwicht op LT bij volmaakte mededinging (slide 17)}
+   \label{fig:evenwichtLTVM}
+\end{figure}
+
+Het even wicht op lange termijn, zie figuur~\ref{fig:evenwichtLTVM} zit iets anders in elkaar. Het aantal ondernemingen is nu niet meer vast, dus het totale aanbod hangt af van het aantal ondernemingen dat zal produceren, maar hoeveel zullen dit er zijn? We gaan er van uit dat nieuwe ondernemers zullen blijven toetreden zo lang er winst gemaakt kan worden, of in andere woorden, tot $p$ het minimum van $GK$ bereikt. Dit zal er voor zorgen dat $A_{LT}$ horizontaal verloopt en dus perfect prijselastisch is. In het evenwicht op lange termijn zullen dus volgende zaken gelden:
+\begin{enumerate}
+   \item elke onderneming heeft \textbf{maximale winst}: $MO(q^*) = MK_{LT}(q^*)) \text{ of } p = MK_{LT}(q^*)$
+   \item voor elke onderneming is de \textbf{winst 0}: $GO(q^*) = GK_{LT}(q^*) \text{ of } p = GK_{LT}(q^*)$
+   \item marktvraag = marktaanbod
+\end{enumerate}
+Uit puntje 1 en 2 volgt dat $p = MK_{LT}(q^*) = GK_{LT}(q^*)$. Alle ondernemingen produceren dus in het minimum van $GK_{LT}$ (=\textbf{kosteneffici\"entie}).
+
+Waarom hebben we in dit geval het aantal ondernemingen nodig? Dit aantal zal bepalen hoeveel ondernemingen er operationeel zullen zijn. De $q^*$ in het punt waar $V = A_{LT}$ zal het aantal ondernemingen bepalen.
+
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[scale=0.4]{Images/white.png}
+   \caption{Vorming evenwicht op LT bij VM met meerdere kostenstructuren (slide 19)}
+   \label{fig:evenwichtLTVMmeerdere}
+\end{figure}
+
+In figuur~\ref{fig:evenwichtLTVMmeerdere} zie je wat er gebeurt als we afstappen van de veronderstelling dat alle ondernemingen dezelfde kostenstructuur hebben. Eerst zullen de meest effici\"ente ondernemingen beginnen aanbieden, daarna komen ook de minder effici\"ente ondernemingen op de markt tot ook de meest ineffici\"ente ondernemingen een prijs kunnen krijgen die het minimum van hun $GK$ dekt.
+
+\subsection{Welvaartsinterpretatie}
+\subsubsection{Pareto-Effici\"entie}
+\label{sssec:paretoefficientie}
+Een situatie is pareto-effici\"ent als het onmogelijk is een wijziging door te voeren waarbij de welvaart van ten minste \'e\'en individu toeneemt zonder dat de welvaart van ten minste \'e\'en ander individu daalt. Dit criterium zullen we gebruiken om de welvaart te gaan vergelijken in verschillende situaties.
+
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[scale=0.4]{Images/white.png}
+   \caption{Pareto-front (slide 21)}
+   \label{fig:paretofront}
+\end{figure}
+Verschillende punten van welvaart kunnen weergeven worden zoals in figuur~\ref{fig:paretofront}. Punten op dat front zijn allemaal equivalent aan elkaar, merk de analogie op met $PMC$. Dit betekent ook dat gegeven de productiemiddelen van een samenleving, dat er een bepaalde maximale welvaart is die bereikt kan worden. Merk ook op dat punt $N$ niet rechtstreeks met punt $E$ vergeleken kan worden.
+
+We weten dat we bij volmaakte mededinging op de factorgrens uit zullen komen omdat:
+\begin{enumerate}
+   \item $MO(q^*) = MK(q^*)$
+   \item $MO(q^*) = p$
+\end{enumerate}
+Hieruit volgt dat $p = MK(q^*)$ en er dus sprake is van kosteneffici\"entie. In $p$ zien we ook de marginale bereidheid tot betalen, en die prijs is ook de laagste prijs waarvoor een extra eenheid geproduceerd zal worden $\Rightarrow$ na did punt is er geen mogelijke pareto-verbetering meer.
+\subsubsection{Welvaartsinterpretatie van Vraag en Aanbod}
+Totale welvaart kan bekeken worden als het totale consumenten- en producentensurplus. Deze kunnen vaak uigerekend worden, en bijgevolg kunnen we het gebruiken om de welvaart te berekenen.
+
+\subsubsection{Eerste Welvaartstheorema}
+Vrije prijsvorming op een markt van perfecte concurrentie resulteert in het bereiken van een pareto-optimaal punt: het is onmogelijk een wijziging door te voeren waarbij de welvaart van ten minste \'e\'en individu toeneemt zonder dat de welvaart van ten minste \'e\'en ander individu daalt.
+
+Dit is eenvoudig grafisch aan te tonen m.b.v. de surplussen. Indien het evenwicht bereikt wordt waar $V=A$ en zal het totale surplus maximaal zijn (zie ook \ref{sssec:paretoefficientie}). Als de markt hetzelfde blijft, maar $q^*$ veranderd kan je a.d.h.v. de surplussen zien dat de totale welvaart daalt.
+\todo[inline]{TODO: eventueel grafiek om dit aan te tonen}
+
+Het welvaartsverlies bij het niet tot stand komen van het marktevenwicht kan dus berekend worden met behulp van de surplussen. Namelijk door het verschil voor en na te bekijken.
+
+\subsubsection{Beperkingen van het Eerste Welvaartstheorema}
+Er worden een paar dingen aangenomen die niet volledig realistisch zijn:
+\begin{itemize}
+   \item \textbf{perfecte concurrentie}:
+      \begin{itemize}
+         \item \textbf{marktatomisme}
+         \item \textbf{homogene goederen}
+         \item \textbf{perfecte informatie}
+      \end{itemize}
+   \item \textbf{Publieke goederen en externe effecten}: soms is het zo dat de markt geen optimale situatie voortbrengt en dat de overheid zal moeten ingrijpen (komt later aan bod).
+   \item \textbf{Verdeling}: perfecte concurrentie zal de hoogste totale welvaart met zich meebrengen, maar zegt niets over hoe deze over de gemeenschap verdeeld wordt.
+   \item \textbf{Overheidsfalingen}
+\end{itemize}
