--- a/main.tex
+++ b/main.tex
@@ -91,6 +91,9 @@
 \tableofcontents
 \newpage
 
+\listoffigures
+\newpage
+
 % ------------------------------------------------------------------------------
 % Contents
 % ------------------------------------------------------------------------------
@@ -104,6 +107,7 @@
 \input{Parts/06DeOndernemingAlsOrganisatie}
 \input{Parts/07ProductieEnKosten.tex}
 \input{Parts/08VolmaakteMededinging.tex}
+\input{Parts/09Monopolie.tex}
 
 
 \end{document}
