fixed some errata

--- a/Parts/01WaaroverEnHoeDenkenEconomen.tex
+++ b/Parts/01WaaroverEnHoeDenkenEconomen.tex
@@ -29,7 +29,7 @@ De economie is dus enorm vooruit gegaan (zie slides 8-15 voor grafieken), er zij
 Cruciale vragen hierbij zijn hoeveel, wat, hoe, voor wie en door wie er geproduceerd wordt. Antwoord zal grotendeels in markt-/prijsmechanisme liggen, maar soms ook rol voor overheid.
 
 \subsection{Hoe Kijken Economen naar deze Vragen?}
-(Zie slide 17) De belangrijkste invalshoek is die van \textbf{schaarste}.  Er zijn vele behoeften, quasi oneindig en de meeste zijn herhaalbaar, er zijn er ook die vermenigvuldigbaar zijn\\
+(Zie slide 17) De belangrijkste invalshoek is die van \textbf{schaarste}.  Er zijn vele behoeften, quasi oneindig en de meeste zijn herhaalbaar, er zijn er ook die vermenigvuldigbaar\todo{wat is herhaalbaar en vermenigvuldigbaar?} zijn\\
 $\rightarrow$ om behoeften te te vervullen zijn goederen nodig. Beschikbare goederen zijn niet voldoende om aan alle behoeften de voldoen \textbf{= schaarste}.
 
 Dit leidt tot kiezen en ook tot de problemen van wat en hoe te produceren.
@@ -38,11 +38,10 @@ Uit deze schaarste, en de keuze die daardoor gemaakt moeten worden leiden een aa
 
 
 \subsection{Centrale Begrippen van de Economische Analyse}
-\todo[inline]{Subtitels baseren op boek}
 We kijken dus naar de productie. Er worden een aantal concepten gelanceerd om hier verder in te kunnen gaan. De eerste drie zijn \textbf{economische agenten}. Deze zijn personen en instellingen die beslissingen nemen (binnen een econ. context).
 
 \subsubsection{Onderneming}
-(zie slide 18) Een onderneming gaat output produceren a.d.h.v. inputs. Input die volledig in de output ``verdwijnt'' noemt men lopende inputs. Dit kan gaan over grond- of hulpstoffen. Anderzijds zijn er meer duurzame inputs zoals kapitaal (machines, etc.) en arbeid(menselijk kapitaal). Deze worden ook in het productieproces ingezet. De onderneming gaat toegevoegde waarde (\textit{TW}) te cre\"{e}ren in het productieproces aangezien de som van de inputs beter geschikt is voor behoeftebevrediging dan de afzonderlijke inputs alleen.
+(zie slide 18) Een onderneming gaat output produceren a.d.h.v. inputs. Input die volledig in de output ``verdwijnt'' noemt men \textbf{lopende inputs}. Dit kan gaan over grond- of hulpstoffen. Anderzijds zijn er \textbf{meer duurzame inputs} zoals kapitaal (machines, etc.) en arbeid(menselijk kapitaal). Deze worden ook in het productieproces ingezet. De onderneming gaat \textbf{toegevoegde waarde} ($TW$) te cre\"{e}ren in het productieproces aangezien de som van de inputs beter geschikt is voor behoeftebevrediging dan de afzonderlijke inputs alleen.
 
 \subsubsection{Consumenten}
 Waarschijnlijk de belangrijskte econ. agenten. Ze bieden productiefactoren aan, via arbeid (\textit{L}) en krijgen hiervoor een inkomen (\textit{y}). Dit kunnen ze dan besteden aan consumptie of aan sparen (= toename v/h vermogen = uitgesteld sparen).
@@ -57,7 +56,7 @@ De overheid heeft 4 grote taken:
 \end{description}
 
 \subsubsection{Een Eenvoudige Economische Kringloop}
-Gezinnen leveren arbeid aan ondernemingen (fysieke stroom) en krijgen hiervoor een inkomen (geldstroom). Anderzijds leveren de ondernemingen goederen en diensten aan de gezinnen (fysieke stroom) en krijgen zij hier voor betaald (geldstroom), als weergeven in figuur~\ref{fig:eenvoudigeEconomischeKringloop}
+Gezinnen leveren arbeid aan ondernemingen (fysieke stroom) en krijgen hiervoor een inkomen (geldstroom). Anderzijds leveren de ondernemingen goederen en diensten aan de gezinnen (fysieke stroom) en krijgen zij hier voor betaald (geldstroom), als weergeven in figuur~\ref{fig:eenvoudigeEconomischeKringloop}.
 
 Deze is echter niet erg realistisch:
 \begin{itemize}
@@ -77,11 +76,10 @@ Deze is echter niet erg realistisch:
 \subsection{Productiviteit}
 Niet alleen de wereldproductie is enorm toegenomen, maar ook de productiviteit is enorm toegenomen en lag aan de basis van die stijging in wereldproductie. Met die stijging in productiviteit bedoelen we dat met dezelfde inzet van middelen nu meer geproduceerd kan worden dan voorheen.
 
-Aangezien productiviteitssteiginen de basis vormen van welvaartstoenamen, is dit een belangrijk thema binnen de economie. Redenen voor een stijging kan bvb. technologische vooruitgang zijn. Welvaartstoename kan ook via andere wegen tot stand komen, bvb via ruil na specialisatie.
+Aangezien productiviteitsstijgingen de basis vormen van welvaartstoenamen, is dit een belangrijk thema binnen de economie. Redenen voor een stijging kan bvb. technologische vooruitgang zijn. Welvaartstoename kan ook via andere wegen tot stand komen, bvb via ruil na specialisatie.
 
 \subsection{Specialisatie \& Ruil}
 \label{ssec:SpecialisatieEnRuil}
-\todo[inline]{TODO: grafieken met CMC en PMC}
 
 Welvaart kan toenemen via specialisatie en ruil. Dit doordat specialisatie leidt tot een verhoogde arbeidsproductiviteit. Verder doorgedreven specialisatie leidt ook tot toenemende ruilactiviteiten.
 
@@ -142,7 +140,7 @@ We kunnen nu al op zicht zien wie beter is in de productie van welk goed en daar
     \label{table:sec1:compCost}
 \end{table}
 
-Als je naar tabel~\ref{table:sec1:compCost} kijkt zie je dat Lisa en Bart elk gaan produceren wat voor hen relatief gezien het goedkoopst is. De ruilvoet voor Ipods of Hemden die bij handel tot stand komt zal tussen de relatieve kost voor Ipods of Hemden van Bart en Lisa liggen.
+Als je naar tabel~\ref{table:sec1:compCost} kijkt zie je dat Lisa en Bart elk gaan produceren wat voor hen relatief gezien het goedkoopst is. In andere woorden, ze gaan produceren waar ze het best in zijn. De ruilvoet voor Ipods of Hemden die bij handel tot stand komt zal tussen de relatieve kost voor Ipods of Hemden van Bart en Lisa liggen.
 
 We kunnen dit alles ook via grafieken weergeven. De Productiemogelijkhedencurve ($PMC$) in autarkie is in figuur~\ref{fig:cmcEnPmcAutarkie} weergegeven. Het feit dat de relatieve kost van beide goederen niet gelijk is voor Bart en Lisa kan je zien aan de verschillende helling van de curves. In dit geval, aangezien er geen handel is, is de $PMC = CMC$, waarbij dat laatste voor consumptiemogelijkhedencurve staat. M.a.w., hun eigen productie is wat ze kunnen consumeren.
 \begin{figure}[htbp]
@@ -152,7 +150,7 @@ We kunnen dit alles ook via grafieken weergeven. De Productiemogelijkhedencurve 
 	\label{fig:cmcEnPmcAutarkie}
 \end{figure}
 
-Wanneer er handel onstaat, komt daarbij ook een bepaalde ruilvoet. Wanneer we deze kennen kunnen we de nieuwe $CMC$ tekenen, als weergeven in figuur~\ref{fig:cmcHandel} voor een ruilvoet van 1:1. Je kan nu ook grafisch zien dat ze erop vooruitgaan qua consumptie.
+Wanneer er handel onstaat, komt daarbij ook een bepaalde ruilvoet. Wanneer we deze kennen, kunnen we de nieuwe $CMC$ tekenen, als weergeven in figuur~\ref{fig:cmcHandel} voor een ruilvoet van 1:1. Je kan nu ook grafisch zien dat ze erop vooruitgaan qua consumptie.
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[scale=0.4]{Images/white.png}
@@ -160,13 +158,7 @@ Wanneer er handel onstaat, komt daarbij ook een bepaalde ruilvoet. Wanneer we de
 	\label{fig:cmcHandel}
 \end{figure}
 
-Tot slot kunnen we ook nog de $PMC$ van de hele samenleving tekenen (Bart en Lisa samen). Het resultaat daarvan zie je in figuur~\ref{fig:pmcHandel}.
-\begin{figure}[htbp]
-	\centering
-	\includegraphics[scale=0.4]{Images/white.png}
-	\caption{PMC voor handel van de hele maatschappij na handel}
-	\label{fig:pmcHandel}
-\end{figure}
+Tot slot kunnen we ook nog de $PMC$ van de hele samenleving tekenen (Bart en Lisa samen). Het resultaat daarvan zie je in figuur~\ref{fig:cmcHandel}.
 
 
 \subsection{Hoe Spreken Economen?}
