--- a/Parts/02MensenInstitutiesEnMarkten.tex
+++ b/Parts/02MensenInstitutiesEnMarkten.tex
@@ -24,9 +24,9 @@ Individueel optimum valt echter niet altijd samen met maatschappelijk optimum. S
 
 Er zijn een aantal systemen die voorkomen voor arbeidsverdeling en co\"{o}rdinatie.
 \begin{description}
-	\item[Traditionele Systemen] Wat en hoe gedicteerd door traditionele regels/sociale normen. Niet geschikt voor dynamische omgevingen.
-    \item[Bevelsystemen] Centrale instantie regelt wie wat/hoe/hoeveel/voor wie produceert. Nood aan het verzamelen van veel informatie en er ontstaat een moeilijk te overkomen incentiefprobleem.
-    \item[Marktsystemen] Econ. agenten beslissen zelf over alles, met als doen zelf zo goed mogelijk af te zijn. Alhoewel handel niet  altijd spontaan tot stand komt, er is nood aan duidelijk gedefini\"{e}erd eigendomsrecht, zal dit wel altijd voordeel leveren aan de betrokken partijen. \textbf{Prijzen} zijn belangrijk bij marktsystemen. Ze geven signalen over voorkeuren v/d consumenten en kosten v/d producenten. Daarnaast zijn veranderingen in prijs ook een incentief voor econ. agenten om hun gedrag aan te passen. Er speelt wel een informatieprobleem . In sommige gevallen, zoals tabel~\ref{tab:tweedeHands} gaan uiteindelijk de aanbieders van goede wagens zich terugtrekken. Dit omdat de verwachte waarde van de aankoop EUR 2600 is(gewogen gemiddelde als je weet dat 2/3 auto's slecht is). Dit is onder de vraagprijs voor goede auto's, dus deze gaan verdwijnen. Dit herhaalt zich tot de markt uitdooft.
+	\item[Traditionele Systemen] Wat en hoe gedicteerd door \textbf{traditionele regels/sociale normen}. Niet geschikt voor dynamische omgevingen.
+    \item[Bevelsystemen] Centrale instantie regelt wie wat/hoe/hoeveel/voor wie produceert. Nood aan het verzamelen van veel informatie en er ontstaat een moeilijk te overkomen \textbf{incentiefprobleem}.
+    \item[Marktsystemen] Econ. agenten beslissen zelf over alles, met als doen zelf zo goed mogelijk af te zijn. Alhoewel handel niet  altijd spontaan tot stand komt, er is nood aan duidelijk gedefini\"{e}erd eigendomsrecht, zal dit wel altijd voordeel leveren aan de betrokken partijen. \textbf{Prijzen} zijn belangrijk bij marktsystemen. Ze geven signalen over voorkeuren v/d consumenten en kosten v/d producenten. Daarnaast zijn veranderingen in prijs ook een incentief voor econ. agenten om hun gedrag aan te passen. Er speelt wel een \textbf{informatieprobleem} . In sommige gevallen, zoals tabel~\ref{tab:tweedeHands} gaan uiteindelijk de aanbieders van goede wagens zich terugtrekken. Dit omdat de verwachte waarde van de aankoop EUR 2600 is(gewogen gemiddelde als je weet dat 2/3 auto's slecht is). Dit is onder de vraagprijs voor goede auto's, dus deze gaan verdwijnen. Dit herhaalt zich tot de markt uitdooft.
 \end{description}
 \begin{table}[h]
 	\centering
