--- a/Parts/04ElasticiteitenEnSchokken.tex
+++ b/Parts/04ElasticiteitenEnSchokken.tex
@@ -19,11 +19,11 @@ Een voor de hand liggende maatstaf is de rico v/d vraagfunc., maar: een toename 
 \end{equation}
 
 
-Dankzij figuur~\ref{fig:eigenPrijselasticiteitVanDeVraag} kunnen we verwachten dat $\varepsilon^{v}_{p} < 0$. Daarnaast is de prijselasticiteit niet gelijk aan de rico en ook niet constant. Ze vari\"{e}ert langsheen de vraagrechte. Ze hangt wel samen met de rico.
+Dankzij logisch nadenken kunnen we verwachten dat $\varepsilon^{v}_{p} < 0$. Daarnaast is de prijselasticiteit niet gelijk aan de rico en ook niet constant. Ze vari\"{e}ert langsheen de vraagrechte. Ze hangt wel samen met de rico.
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[scale=0.4]{Images/white.png}
-	\caption{Eigen prijselasticiteit van de vraag (slide 4)}
+	\caption{Eigen prijselasticiteit van de vraag (slide 6)}
 	\label{fig:eigenPrijselasticiteitVanDeVraag}
 \end{figure}
 
@@ -68,7 +68,7 @@ Elasticiteiten worden dus gebruikt om te kijken wat er zal gebeuren voordat je e
 $\varepsilon^{v}_{p}$ is groter naarmate:
 \begin{itemize}
 	\item meer substituten aanwezig zijn (gemakkelijk omschakelen als $p$ stijgt)
-    \item vraag minder dringend is. Vb. vraag voedsel >< vraag bioscooptickets. Vraag naar voedsel is dringender en een stijging van $p$ gaat minder invloed hebben dan wanneer dit voor bioscooptickets gebeurt.
+    \item vraag minder dringend is. Vb. vraag voedsel $><$ vraag bioscooptickets. Vraag naar voedsel is dringender en een stijging van $p$ gaat minder invloed hebben dan wanneer dit voor bioscooptickets gebeurt.
     \item het bestedingsaandeel voor dat goed groter is.
     \item de beschouwde tijdsperiode langer is. Op korte termijn reageren consumenten matig op veranderingen. Het heeft tijd nodig voordat mensen volledig overschakelen op iets anders.
 \end{itemize}
@@ -76,7 +76,7 @@ $\varepsilon^{v}_{p}$ is groter naarmate:
 
 
 \subsubsection{Inkomenselasticiteit van de Vraag}
-Genoteerd als $\varepsilon^{v}_{y}$, en geeft weer in welke mate een verandering van het inkomen een verandering van $q^V$ met zich meebrengt. Onze intu\"itie zegt dat dit verband recht evenredig zijn, en dat bijgevolg $\varepsilon^{v}_{y}$ positief zal zijn. De formule is analoog aan formule~\ref{eq:prijselasticiteitvandevraag}, maar $p$ wordt door $y$ vervangen.
+Genoteerd als $\varepsilon^{v}_{y}$, en geeft weer in welke mate een verandering van het inkomen een verandering van $q^V$ met zich meebrengt. Onze intu\"itie zegt dat dit verband recht evenredig moet zijn, en dat bijgevolg $\varepsilon^{v}_{y}$ positief zal zijn. De formule is analoog aan formule~\ref{eq:prijselasticiteitvandevraag}, maar $p$ wordt door $y$ vervangen.
 
 Wat we echter zien is dat er een aantal verschillende situaties optreden, met verschillende waarden voor $\varepsilon^{v}_{y}$.
 \begin{description}
@@ -119,7 +119,7 @@ In tegenstelling tot de prijselasticiteit van de vraag is $\varepsilon^{A}_{p} =
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[scale=0.4]{Images/white.png}
-	\caption{Aanbodschok met een perfect inelastische, een normale en een perfect elastische vraag}
+	\caption{Aanbodschok met een perfect inelastische, een normale en een perfect elastische vraag (slide 26)}
 	\label{fig:aanbodschok}
 \end{figure}
 
@@ -179,7 +179,7 @@ Aanbodcurve wordt verticaal vanaf $q_{max}$ waardoor $p$ zal stijgen. Dit zorgt 
 \subsubsection{Indirecte Belastingen en Subsidies}
 Bij belastingen of subsidies kunnen we niet meer spreken over ``de prijs'', we maken een onderscheid tussen volgende drie prijzen:
 \begin{description}
-	\item[marktprijs ($p$)] wat de ene partij aan de andere betaalt
+	\item[marktprijs ($p^*$)] wat de ene partij aan de andere betaalt
     \item[consumentenprijs ($p^V$)] effectief betaalde prijs door de cons., rekening houdend met door hem betaalde belasting of ontvangen subsidies.
     \item[producentenprijs ($p^A$)] wat de producent effectief krijgt.
 \end{description}
